# ebpf-track-conn-exp

./: .gitignore  CMakeLists.txt  Makefile  README.md  common.h  compile-kern.sh  compile-user.sh  compile.sh  genskel-kern.sh  genskel.sh  genvmlinux-kern.sh  genvmlinux.sh  go.mod  mod-environment.sh  trackconn.c  trackconn.ebpf.c  trackconn.ebpf.h  trackconn.h  tracksock.ebpf.c  tracktcp.ebpf.c  trackudp.ebpf.c  vmlinux.h
archived/: trackconn.c  trackconn.h
headers/: common.h  trackconn.ebpf.h
src-go/: README.md  go.mod  go.sum
src-go/cmd/: .gitignore  main.go
src-go/scripts/: build.sh
src-go/utils/: parser.go  typecov.go
